[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "mounikapalani",email = "mounikapalani@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry.scripts]
get-papers-list = "app.get-papers-list:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
